them test + refactor cac file cho dep